chg: Fixing issuewhere hero units set to image sizing would have extra space at the bottom. Resolves #734

--- a/modules/features/cu_hero_unit/scss/cu_hero_unit.scss
+++ b/modules/features/cu_hero_unit/scss/cu_hero_unit.scss
@@ -109,6 +109,7 @@ $radius_small: 3px;
   img {
     width:100%;
     height: auto;
+    display: block;
   }
 }
 .hero-unit-image .hero-unit-content-wrapper {
